jasppa-me: Fix desktop file

--- a/packages/app-editors/jasspa-me/files/jasspa-microemacs.desktop
+++ b/packages/app-editors/jasspa-me/files/jasspa-microemacs.desktop
@@ -5,8 +5,8 @@ Name=Jasspa MicroEmacs
 GenericName=Text Editor
 Comment=Advanced Text Editor
 Icon=/usr/share/jasspa/pixmaps/me_128.png
-TryExec=mecw
-Exec=mecw %F
+TryExec=me
+Exec=me %F
 Terminal=false
 MimeType=text/plain;
 Categories=Development;TextEditor;
